--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 VITE_APPWRITE_BACKEND_ENDPOINT=''
-PROJECT_ID=''
-DATABASE_ID=''
-COLLECTION_ID=''
-BUCKET_ID=''
+VITE_APPWRITE_PROJECT_ID=''
+VITE_APPWRITE_DATABASE_ID=''
+VITE_APPWRITE_COLLECTION_ID=''
+VITE_APPWRITE_BUCKET_ID=''
